--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
           <div class="profile-wrap">
             <!-- ここにあなたの写真を置く：assets/img/profile.jpg -->
-            <img class="profile-img" src="assets/img/profile.jpg" alt="今川大悟のプロフィール写真">
+            <img class="profile-img" src="assets/img/profile.jpg.png" alt="今川大悟のプロフィール写真">
           </div>
         </div>
       </section>
