Update profile image source in index.html

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           </div>
 
           <div class="profile-wrap">
-            <!-- ここにあなたの写真を置く：assets/img/profile.jpg -->
+            <!-- ここにあなたの写真を置く：assets/img/profile.jpg.png. -->
             <img class="profile-img" src="assets/img/profile.jpg.png" alt="今川大悟のプロフィール写真">
           </div>
         </div>
