--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="hero-inner hero-layout">
           <!-- 画像（スマホでは最上段に来る） -->
           <div class="hero-media">
-            <img class="profile-img" src="assets/img/profile.jpg" alt="今川大悟のプロフィール写真">
+            <img class="profile-img" src="assets/img/profile.jpg.png" alt="今川大悟のプロフィール写真">
           </div>
 
           <!-- テキスト -->
