Remove old hero image and update profile image

--- a/index.html
+++ b/index.html
@@ -32,12 +32,7 @@
       <!-- HERO -->
       <section class="hero">
         <div class="hero-inner hero-layout">
-          <!-- 画像（スマホでは最上段に来る） -->
-          <div class="hero-media">
-            <img class="profile-img" src="assets/img/profile.jpg.png" alt="今川大悟のプロフィール写真">
-          </div>
-
-          <!-- テキスト -->
+          <!-- PCでは先に文章（旧デザインの綺麗な順番） -->
           <div class="hero-copy">
             <div class="kicker">
               <span class="pill">Web制作</span>
@@ -72,6 +67,11 @@
                 <div class="value">原則24h以内返信</div>
               </div>
             </div>
+          </div>
+
+          <!-- 写真 -->
+          <div class="hero-media">
+            <img class="profile-img" src="assets/img/profile.jpg" alt="今川大悟のプロフィール写真">
           </div>
         </div>
       </section>
