Fix image source extension in profile section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
           <!-- 写真 -->
           <div class="hero-media">
-            <img class="profile-img" src="assets/img/profile.jpg" alt="今川大悟のプロフィール写真">
+            <img class="profile-img" src="assets/img/profile.jpg.png" alt="今川大悟のプロフィール写真">
           </div>
         </div>
       </section>
