--- a/about.html
+++ b/about.html
@@ -354,7 +354,7 @@ footer{margin-top:26px;padding-top:16px;border-top:1px solid var(--line-subtle);
       <div class="page-hero-inner">
         <div class="profile-header">
           <div class="profile-ring" style="animation:fadeUp .5s var(--ease-out-expo) both;">
-            <img class="profile-img" src="assets/img/profile.jpg" alt="今川大悟のプロフィール写真">
+            <img class="profile-img" src="assets/img/profile.jpg.png" alt="今川大悟のプロフィール写真">
           </div>
           <div class="profile-info">
             <div class="profile-name"><span class="em">今川 大悟</span></div>
